[package]
name = "advent2019"
version = "0.1.0"
authors = ["Stijn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.8"
ndarray = "0.13"
float-ord = "0.2"
regex = "1.3"
rand = "*"
binary-heap-plus = "0.2.0"
